[project]
name = "atr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "google-genai>=1.15.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "lightrag-hku[api]>=1.3.7",
    "nano-vectordb>=0.0.4.3",
    "nest-asyncio>=1.6.0",
    "pdfplumber>=0.11.6",
    "rich>=14.0.0",
]
